cmake_minimum_required(VERSION 3.6)
project(Demo)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES   main.cpp)
add_executable(Demo ${SOURCE_FILES})
add_executable(minStringLengthContainingAllChars minStringLengthContainingAllChars.cpp)
add_executable(NextGreaterElement NextGreaterElement.cpp)
add_executable(MergeOverlappingIntervals MergeOverlappingIntervals.cpp)
add_executable(KthMinElementf KthMinElementfromStream.cpp)
add_executable(KthMinBST KthMinBST.cpp)
add_executable(CloneBinaryTree CloneBinaryTree.cpp)
add_executable(FlipToGetMaxOnes FlipToGetMaxOnes.cpp)
add_executable(CloneLinkedList CloneLinkedList.cpp)
add_executable(KthMinElementfromStreamUsingHeap KthMinElementfromStreamUsingHeap.cpp)
add_executable(Decode Decode.cpp)
add_executable(StringCompression StringCompression.cpp)
add_executable(flatten flatten.cpp)
add_executable(Kfrequen Kfrequen.cpp)
add_executable(PlusPattern PlusPattern.cpp)
add_executable(ReverseStringWords ReverseStringWords.cpp)
add_executable(TopViewofTree TopViewofTree.cpp)
add_executable(KthMinElementfromStream KthMinElementfromStream.cpp)
add_executable(histogram histogram.cpp)
add_executable(RatInMaze RatInMaze.cpp)
add_executable(VerticleOrderPrint VerticleOrderPrint.cpp)
add_executable(SortStringArray SortStringArray.cpp)
add_executable(LCA LCA.cpp)
add_executable(Diameter Diameter.cpp)
add_executable(PrintAllWordsTrie PrintAllWordsTrie.cpp)
add_executable(KMostFrequentNumbers KMostFrequentNumbers.cpp)
add_executable(Examp Examp.cpp)
add_executable(FoldLinkList FoldLinkList.cpp)
add_executable(addLinkedList addLinkedList.cpp)
add_executable(SubtractLinkedList SubtractLinkedList.cpp)
add_executable(CloneLinkedListUsingMap CloneLinkedListUsingMap.cpp)
add_executable(KthSmallestInSortedMatrix KthSmallestInSortedMatrix.cpp)
add_executable(StringCompressionInplace StringCompressionInplace.cpp)
add_executable(PrintSpiralMatrix PrintSpiralMatrix.cpp)
add_executable(StackUsingQueue StackUsingQueue.cpp)
add_executable(KFrequent KFrequent.cpp)
add_executable(MinWindowContainingAllChars MinWindowContainingAllChars.cpp)
add_executable(AllSolForExpression AllSolForExpression.cpp)
add_executable(MatrixMultiplicationRecur MatrixMultiplicationRecur.cpp)
add_executable(Grapg Grapg.cpp)
add_executable(AllPossibleIPAddresses AllPossibleIPAddresses.cpp)
add_executable(BFS BFS.cpp)
add_executable(ReverseListUsingStack ReverseListUsingStack.cpp)